Novo arquivo index

--- a/src/main/resources/templates/public/site/index.html
+++ b/src/main/resources/templates/public/site/index.html
@@ -1,11 +1,8 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
-<h:head>
+<!DOCTYPE html>
+<html  xmlns:th="http://www.thymeleaf.org">
+<head>
 		<meta charset="utf-8"/>
-		<title>TecoTeco | Home</title>
+		<title>Mall Toy | Home</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="description" content=""/>
 		<!--[if ie]><meta content='IE=8' http-equiv='X-UA-Compatible'/><![endif]-->
@@ -28,8 +25,8 @@
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 			<script src="js/respond.min.js"></script>
 		<![endif]-->
-	</h:head>
-    <h:body>		
+	</head>
+    <body>		
 		<div id="top-bar" class="container">
 			<div class="row">
 				<div class="span4">
@@ -70,15 +67,15 @@
 							<img src="themes/images/carousel/banner-2.jpg" alt="" />
 							<div class="intro">
 								<h1>TecoTeco</h1>
-								<p><span>Criança não trabalha</span></p>
-								<p><span> Criança da trabalho</span></p>
+								<p><span>CrianÃ§a nÃ£o trabalha</span></p>
+								<p><span> CrianÃ§a da trabalho</span></p>
 							</div>
 						</li>
 						<li>
 							<img src="themes/images/carousel/banner-1.jpg" alt="" />
 							<div class="intro">
 								<h1>TecoTeco</h1>
-								<p><span>Até 50% de desconto </span></p>
+								<p><span>AtÃ© 50% de desconto </span></p>
 								<p><span>Em produtos adqueridos pelo site</span></p>
 							</div>
 						</li>
@@ -256,7 +253,7 @@
 												<li class="span3">
 													<div class="product-box">
 														<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware8.jpg" alt="" /></a></p>
-														<a href="product_detail.html" class="title">Dragão</a><br/>
+														<a href="product_detail.html" class="title">DragÃ£o</a><br/>
 														<a href="products.html" class="category">Quis nostrud</a>
 														<p class="price">R$25.20</p>
 													</div>
@@ -376,5 +373,5 @@
 				});
 			});
 		</script>
-    </h:body>
+    </body>
 </html>
