Layout basico e Controller Index das paginas ADMIN e HOME

--- a/src/main/resources/templates/public/admin/index.html
+++ b/src/main/resources/templates/public/admin/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>:::MALL TOY | Página de administração:::</title>
+<meta charset="UTF-8">
+<title>:::MALL TOY | PÃ¡gina de administraÃ§Ã£o:::</title>
 </head>
 <body>
 
