--- a/src/main/resources/templates/public/admin/alunos/lista.html
+++ b/src/main/resources/templates/public/admin/alunos/lista.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>:::MALL TOY | P&aacute;gina Inicial:::</title>
+<title>:::MALL TOY | P&aacute;gina Administrativa:::</title>
 <link th:href="@{/webjars/bootstrap/css/bootstrap.css}" rel="stylesheet" />
 <link th:href="@{/webjars/bootstrap/css/bootstrap-theme.css}"
 	rel="stylesheet" />
@@ -21,9 +21,9 @@
 				<h1 class="my-4">Menu Principal</h1>
 				<div class="list-group">
 					<!-- <a href="#" class="list-group-item active">Alunos</a> -->
-					<a href="#" class="list-group-item active">Alunos</a>
-					<a href="#"	class="list-group-item">Categoria</a>
-					<a href="#"	class="list-group-item">Produto</a>
+					<a th:href="@{/alunos/lista}" class="list-group-item active">Alunos</a>
+					<a th:href="@{/categorias/categoriaLista}"	class="list-group-item">Categoria</a>
+					<a th:href="@{/produtos/lista}" class="list-group-item">Produto</a>
 				</div>
 			</div>
 			<!-- /.col-lg-3 -->
@@ -58,9 +58,8 @@
 						      <td th:text="${a.usEmail}"></td>
 						      <td th:text="${a.usStatus}"></td>
 						      <td>
-							    <a th:href="@{'/aluno/visualizar/'+${a.usCodigo}}" class="btn btn-info">Visualizar</a>
 							    <a th:href="@{'/alunos/editar/'+${a.usCodigo}}" class="btn btn-success">Alterar</a>
-							    <a th:href="@{'/alunos/excluir/'+${a.usCodigo}}" class="btn btn-danger">Exclu&iacute;r</a>
+							    <a th:href="@{'/alunos/excluir/'+${a.usCodigo}}" id="btnExcluir" class="btn btn-danger">Exclu&iacute;r</a>
 							  </td>
 						    </tr>
 						  </tbody>
@@ -79,9 +78,8 @@
 
 	</div>
 
-
-
 	<script th:src="@{/webjars/jquery/jquery.js}"></script>
 	<script th:src="@{/webjars/bootstrap/js/bootstrap.js}"></script>
+	<script th:src="@{/js/util.js}"></script>	
 </body>
 </html>
