--- a/src/main/resources/templates/public/admin/categorias/categoriaCad.html
+++ b/src/main/resources/templates/public/admin/categorias/categoriaCad.html
@@ -1,28 +1,100 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" >
-
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Cadastro de Categoria</title>
-	
+<title>:::MALL TOY | Categorias - Cadastro:::</title>
+<link th:href="@{/webjars/bootstrap/css/bootstrap.css}" rel="stylesheet" />
+<link th:href="@{/webjars/bootstrap/css/bootstrap-theme.css}"
+	rel="stylesheet" />
 </head>
 <body>
-	<h1>Cadastro de Categoria</h1>
-	<hr>
-		  
-	<form th:action="${categoria.ctCodigo==null} ? @{/categoria/salvar} : @{/categoria/editar}" 
-		  th:object="${categoria}" 
-		  method="post"		  
-	>
-		Descri&ccedil;&atilde;:<input type="text" th:field="*{ctDescricao}"><br>
-		<input type="hidden" th:field="*{ctCodigo}">
-		<input type="hidden" th:name="ctDtCadastro" th:value="${#calendars.format(#calendars.createNow(), 'yyyy-MM-dd HH:mm')}">
-		<input type="hidden" th:field="*{ctSatus}">
-		<input type="submit" value="Salvar">
-	</form>	
-	<br>
-	<a th:href="@{/categoria/categoriaLista}">Voltar a lista de Categorias</a>	  
-	  
-	
+	<header class="bg-primary text-white">
+		<div class="container text-center">
+			<h1>Categorias - Cadastro</h1>
+		</div>
+	</header>
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-3">
+					<h1 class="my-4">Menu Principal</h1>
+					<div class="list-group">
+						<!-- <a href="#" class="list-group-item active">Alunos</a> -->
+						<a th:href="@{/alunos/lista}" class="list-group-item ">Alunos</a>
+						<a th:href="@{/categorias/categoriaLista}" class="list-group-item active">Categoria</a>
+						<a th:href="@{/produtos/lista}" class="list-group-item">Produto</a>
+					</div>
+				</div>
+			<!-- /.col-lg-3 -->
+
+			<div class="col-lg-9">
+				<div class="card mt-4">
+					<!-- <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt=""> -->
+					<div class="card-body">
+						<h3 class="card-title">Cadastro de Categorias</h3>
+						<hr/>
+						
+						<!-- MENSAGEM DE SUCESSO -->
+						<div th:if="${message != null}" class="alert alert-success alert-dismissible" role="alert">				
+							<span th:text="${message}"></span>
+							<button type="button" class="close" data-dismiss="alert">&times;</button>
+						</div>	
+								
+						<form th:action="${categoria.ctCodigo == null} ? @{/categorias/salvar} : @{/categorias/editar}"
+							th:object="${categoria}"
+							method="post" enctype="multipart/form-data">
+							<!-- MENSAGENS DE VALIDAÇÕES -->
+							<div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger alert-dismissible" role="alert">				
+								<div th:each="error : ${#fields.detailedErrors()}">
+									<span th:text="${error.message}"></span>
+								</div>
+								<button type="button" class="close" data-dismiss="alert">&times;</button>
+							</div>
+										
+							<input type="hidden" th:field="*{ctCodigo}"/> 
+						<table class="table table-bordered">
+						  <tbody>
+							<tr th:if="${categoria.ctCodigo != null} ">
+						      <th>Status: </th>
+						      <td>						      
+								<select class="form-control" name="ctStatus">
+									<option value="">---Selecione o Status---</option>
+									<option th:value="0" th:text="Inativo" th:selected="${categoria.ctCodigo != null && categoria.ctStatus == 0}"></option>
+									<option value="1" th:text="Ativo" th:selected="${categoria.ctStatus == 1}"></option>
+								</select>								 
+							  </td>
+						    </tr>
+						    <tr>
+						      <th>Nome: </th>
+						      <td><input type="text" th:field="*{ctDescricao}" class="form-control"/></td>
+						    </tr>
+						    <tr>
+						    	<td>&nbsp;</td>
+						      <td>
+							      <button type="submit" value="Salvar" class="btn btn-info">Salvar</button>
+							  </td>
+						    </tr>
+						  </tbody>
+						</table>
+						</form>
+						<a th:href="@{/categorias/categoriaLista}" class="btn btn-default">&larr; Lista de Categorias</a>
+					</div>				
+				</div>
+				<!-- <a href="#" class="btn btn-success">Leave a Review</a> -->
+			</div>
+		</div>
+		<!-- /.card -->
+
+	</div>
+	<!-- /.col-lg-9 -->
+
+	</div>
+
+	</div>
+
+
+
+	<script th:src="@{/webjars/jquery/jquery.js}"></script>
+	<script th:src="@{/webjars/bootstrap/js/bootstrap.js}"></script>
 </body>
 </html>
