--- a/src/main/resources/templates/public/admin/categorias/categoriaLista.html
+++ b/src/main/resources/templates/public/admin/categorias/categoriaLista.html
@@ -2,29 +2,71 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Lista de Categorias</title>
-	
+<title>:::MALL TOY | P&aacute;gina Administrativa:::</title>
+<link th:href="@{/webjars/bootstrap/css/bootstrap.css}" rel="stylesheet" />
+<link th:href="@{/webjars/bootstrap/css/bootstrap-theme.css}" rel="stylesheet" />
 </head>
 <body>
-	<h1>Lista de Categorias</h1>
-	<hr>
+	<header class="bg-primary text-white">
+		<div class="container text-center">
+			<h1>Menu administrativo</h1>
+		</div>
+	</header>
 	
-	<a th:href="@{/produto/produtoCad}">Novo Produto</a> |
-	<a th:href="@{/categoria/categoriaCad}">Nova categoria</a>
-	
-	<table border="1" class="table">
-		<tr>
-			<th>Id</th>
-			<th>Descrição</th>
-			<th colspan="2">Controles</th>
-		</tr>
-		
-		<tr th:each="c : ${categoria}">
-			<td th:text = ${c.ctDescricao}> </td>
-			<td><a th:href="@{'/categoria/editar/'+${c.ctCodigo}}">Editar</a></td>
-			<td><a th:href="@{'/categoria/excluir/'+${c.ctCodigo}}">Excluir</a></td>
-		</tr>
-	</table>
-	
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-3">
+					<h1 class="my-4">Menu Principal</h1>
+					<div class="list-group">
+						<!-- <a href="#" class="list-group-item active">Alunos</a> -->
+						<a th:href="@{/alunos/lista}" class="list-group-item ">Alunos</a>
+						<a th:href="@{/categorias/categoriaLista}" class="list-group-item active">Categoria</a>
+						<a th:href="@{/produtos/lista}" class="list-group-item">Produto</a>
+					</div>
+				</div>
+				<!-- /.col-lg-3 -->	
+				<div class="col-lg-9">
+				<div class="card mt-4">
+					<!-- <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt=""> -->
+					<div class="card-body">
+						<h3 class="card-title">Lista de Categorias</h3> 
+						<a th:href="@{/categorias/categoriaCad}" class="btn btn-primary">Nova categoria</a>
+						</hr>
+						<!-- MENSAGEM DE SUCESSO -->
+						<div th:if="${message != null}" class="alert alert-success alert-dismissible" role="alert">				
+							<span th:text="${message}"></span>
+							<button type="button" class="close" data-dismiss="alert">&times;</button>
+						</div>
+						
+						<table class="table table-bordered">
+						  <thead>
+						    <tr>
+						      <th scope="col">#</th>
+						      <th scope="col">Descri&ccedil;&atilde;o</th>
+						      <th scope="col">Status</th>
+						      <th scope="col">&nbsp;</th>
+						    </tr>
+						  </thead>
+						  <tbody>
+						    <tr th:each="c : ${categoria}">
+						      <td scope="row" th:text = "${c.ctCodigo}"></td>
+						      <td th:text = "${c.ctDescricao}"></td>
+						      <td th:text="${c.ctStatus}"></td>
+						      <td>
+							    <a th:href="@{'/categorias/editar/'+${c.ctCodigo}}" class="btn btn-success">Alterar</a>
+							    <a th:href="@{'/categorias/excluir/'+${c.ctCodigo}}" id="btnExcluir" class="btn btn-danger">Exclu&iacute;r</a>
+							  </td>
+						    </tr>
+						  </tbody>
+						</table>
+					</div>				
+				</div>
+				<!-- <a href="#" class="btn btn-success">Leave a Review</a> -->
+			</div>	
+			</div>
+		</div>
+	<script th:src="@{/webjars/jquery/jquery.js}"></script>
+	<script th:src="@{/webjars/bootstrap/js/bootstrap.js}"></script>
+	<script th:src="@{/js/util.js}"></script>	
 </body>
 </html>
