Inclusão de novos recursos na tela de produto e imagens

--- a/src/main/resources/templates/public/admin/index.html
+++ b/src/main/resources/templates/public/admin/index.html
@@ -25,6 +25,7 @@
 					<a th:href="@{/alunos/lista}" class="list-group-item">Alunos</a>
 					<a th:href="@{/categorias/categoriaLista}"	class="list-group-item">Categoria</a>
 					<a th:href="@{/produtos/lista}" class="list-group-item">Produto</a>
+					<a th:href="@{/images/lista}" class="list-group-item">Imagens</a>
 				</div>
 			</div>
 			<!-- /.col-lg-3 -->
