--- a/src/main/resources/templates/public/admin/categorias/categoriaCad.html
+++ b/src/main/resources/templates/public/admin/categorias/categoriaCad.html
@@ -20,9 +20,10 @@
 					<h1 class="my-4">Menu Principal</h1>
 					<div class="list-group">
 						<!-- <a href="#" class="list-group-item active">Alunos</a> -->
-						<a th:href="@{/alunos/lista}" class="list-group-item ">Alunos</a>
-						<a th:href="@{/categorias/categoriaLista}" class="list-group-item active">Categoria</a>
+						<a th:href="@{/alunos/lista}" class="list-group-item">Alunos</a>
+						<a th:href="@{/categorias/categoriaLista}"	class="list-group-item">Categoria</a>
 						<a th:href="@{/produtos/lista}" class="list-group-item">Produto</a>
+						<a th:href="@{/images/lista}" class="list-group-item">Imagens</a>
 					</div>
 				</div>
 			<!-- /.col-lg-3 -->
